--- a/final_project.html
+++ b/final_project.html
@@ -1,38 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Final Responsive Website Project</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Responsive Final Project</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Summer Youth Activities</h1>
-    </header>
-    <main>
-        <section class="intro">
-            <h2>Welcome to Our Event</h2>
-            <p>Join us in exciting summer activities, learning, and fun moments together!</p>
-        </section>
+  <header>
+    <h1>Welcome to My Responsive Website</h1>
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#features">Features</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-        <section class="gallery">
-            <h2>Photo Highlights</h2>
-            <div class="photos">
-                <img src="1.jpg" alt="Activity 1">
-                <img src="2.jpg" alt="Activity 2">
-                <img src="3.jpg" alt="Activity 3">
-                <img src="4.jpg" alt="Activity 4">
-            </div>
-        </section>
+  <main>
+    <section id="about">
+      <h2>About This Project</h2>
+      <p>
+        This is my final CSS project. The goal is to build a fully responsive 
+        website that adapts to different screen sizes and user preferences. 
+        You can view it on mobile, tablet, or desktop and it will always look clean and accessible.
+      </p>
+    </section>
 
-        <section class="about">
-            <h2>About WESET</h2>
-            <p>WESET is where learning English becomes natural, engaging, and practical. Through interactive games, teamwork, and real-life practice, students gain confidence and creativity in communication.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 Summer Youth Project | All Rights Reserved</p>
-    </footer>
+    <section id="features">
+      <h2>Key Features</h2>
+      <ul>
+        <li>Mobile-first responsive design</li>
+        <li>Tablet and desktop optimized layouts</li>
+        <li>Supports reduced motion for accessibility</li>
+      </ul>
+    </section>
+
+    <section id="contact">
+      <h2>Contact Me</h2>
+      <form>
+        <label for="name">Name:</label>
+        <input type="text" id="name" placeholder="Your name" required>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" placeholder="Your email" required>
+
+        <label for="message">Message:</label>
+        <textarea id="message" placeholder="Write something..." required></textarea>
+
+        <button type="submit">Send</button>
+      </form>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 My Responsive Project. All rights reserved.</p>
+  </footer>
 </body>
 </html>
